# dianna

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CONTEXT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.dev.md  README.md  ROADMAP.md  badges.md  dashboard  next_steps.md  paper.md  project_setup.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.githooks/: pre-commit
.github/actions/install-python-and-package/: action.yml
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  draft-pdf.yml  fair-software.yml  linting.yml  markdown-link-check.yml  markdown_link_check_cron.yml  notebooks.yml  onnx-conversion.yml  release.yml  sonarcloud.yml
dashboard/: Home.py  README.md  _model_utils.py  _models_image.py  _models_text.py  _models_ts.py  _movie_model.py  _shared.py  _ts_utils.py  callbacks.py  dashboard.ipynb  dashboard.py  layouts.py  readme.md  utilities.py
dashboard/.streamlit/: config.toml
dashboard/app_data/: binary-mnist.npz  get_resnet50_classnames.py
dashboard/data/: labels_text.txt  weather_data.npy
dashboard/layouts/: __init__.py  fig.py  header.py  images.py  navbar.py  styles.py  text.py
dashboard/pages/: 1_Images.py  1_images.py  2_Text.py  3_Time_series.py  3_Timeseries.py
dashboard2/: _model_utils.py  _models.py  _models_image.py  _models_text.py  _shared.py  _text_utils.py  readme.md
dashboard2/pages/: 1_images.py  2_text.py
deeprank/: exploration.ipynb  generate_center.py  models.py  one_sample.hdf5  run.py
dianna/: __init__.py  _logging_utils.py  cli.py  downloader.py  my_module.py
dianna/dashboard/: Home.py  Model Explanation Matrix v2.ipynb  Model Explanation Matrix.ipynb  _image_utils.py  _model_utils.py  _models_image.py  _models_tabular.py  _models_text.py  _models_ts.py  _movie_model.py  _shared.py  _text_utils.py  _ts_utils.py  readme.md
dianna/dashboard/.streamlit/: config.toml
dianna/dashboard/pages/: 1_Images.py  2_Text.py  3_Time_series.py  Images.py  Tabular.py  Text.py  Time_series.py
dianna/data/: FRB211024.npy  FRB211024_dianna_demo.npy
dianna/labels/: apertif_frb_classes.txt  leafsnap_classes.csv  weather_data_labels.txt
dianna/methods/: __init__.py  deeplift.py  distance.py  kernelshap.py  kernelshap_image.py  kernelshap_tabular.py  lime.py  lime_image.py  lime_tabular.py  lime_text.py  lime_timeseries.py  rise.py  rise_image.py  rise_tabular.py  rise_text.py  rise_timeseries.py  shap.py
dianna/models/: coffee.onnx  geometric_shapes_model.onnx  leafsnap_model.onnx  mnist_model.onnx  penguin_model.onnx  season_prediction_model_temp_max_binary.onnx  sunshine_hours_regression_model.onnx
dianna/utils/: __init__.py  downloader.py  maskers.py  misc.py  onnx_runner.py  predict.py  projection.ipynb  rise_utils.py  tokenizers.py
dianna/visualization/: __init__.py  image.py  tabular.py  text.py  timeseries.py
docs/: CODE_OF_CONDUCT.md  CONTEXT.md  IO_overview.md  Makefile  ROADMAP.md  Top Level Architecture.drawio  conf.py  developer_info.rst  index.rst  make.bat  tutorials  usage.rst
docs/tutorials/: 0-overview.nblink  2-lime_tabular_penguin.nblink  3-lime_timeseries_weather.nblink  4-kernelshap_geometric_shapes.nblink  9-lime_text_eulaw.nblink  demo.nblink  kernalshap_tabular_weather.nblink  kernel_mnist.nblink  kernelshap_geometric_shapes.nblink  lime_images.nblink  lime_text.nblink  rise_imagenet.nblink  rise_leafsnap.nblink  rise_mnist.nblink  rise_tabular_penguin.nblink  rise_text.nblink  rise_timeseries_frb.nblink
embedding_WIP/: embeddings.py  rise_doodle.ipynb  rise_doodlidee.ipynb  rise_embeddings_2classes.ipynb  rise_embeddings_2classes_power20.ipynb  rise_embeddings_2classes_power20_refactored.ipynb  rise_embeddings_2classes_v2.ipynb
paper/: paper.bib  paper.md
tests/: __init__.py  conftest.py  dashboard_helpers.py  test_common_usage.py  test_dashboard.py  test_dashboard_image.py  test_dashboard_setup.py  test_dashboard_tabular.py  test_dashboard_text.py  test_dashboard_time_series.py  test_deeplift.py  test_distance.py  test_downloader.py  test_init.py  test_kernelshap.py  test_kwargs.py  test_lime.py  test_my_module.py  test_onnx_runner.py  test_rise.py  test_text_visualization.py  test_visualization.py  test_xarray.py  utils.py
tests/methods/: test_kernelshap_image.py  test_lime_image.py  test_lime_tabular.py  test_lime_text.py  test_lime_timeseries.py  test_maskers.py  test_onnx_runner.py  test_rise_image.py  test_rise_tabular.py  test_rise_text.py  test_rise_timeseries.py  test_shap_tabular.py  test_tabular.py  time_series_test_case.py
tests/test_data/: heatmap_lime_filename.npy  heatmap_lime_function.npy  heatmap_lime_values.npy  heatmap_rise_filename.npy  heatmap_rise_function.npy  leafsnap_model.pytorch  mnistnet_training_checkpoint.pt  test_distance_exact_result.npy
tutorials/: README.md  deeplift_mnist.ipynb  demo.ipynb  kernelshap_geometric_shapes.ipynb  kernelshap_mnist.ipynb  kernelshap_tabular_penguin.ipynb  kernelshap_tabular_weather.ipynb  lime_images.ipynb  lime_tabular_penguin.ipynb  lime_tabular_weather.ipynb  lime_text.ipynb  lime_timeseries.ipynb  lime_timeseries_coffee.ipynb  lime_timeseries_weather.ipynb  overview.ipynb  rise_doodle.ipynb  rise_imagenet.ipynb  rise_leafsnap.ipynb  rise_mnist.ipynb  rise_tabular_penguin.ipynb  rise_text.ipynb  rise_timeseries.ipynb  rise_timeseries_frb.ipynb  rise_timeseries_weather.ipynb  tokenizers_test.ipynb  tutorial.py  tutorial_rise.py
tutorials/conversion_onnx/: keras2onnx.ipynb  pytorch2onnx.ipynb  pytroch2onnx.ipynb  requirements.txt  skl2onnx.ipynb  tensorflow2onnx.ipynb
tutorials/conversion_onnx/resnet_savedmodel/: keras_metadata.pb  saved_model.pb
tutorials/explainers/KernelSHAP/: kernelshap_geometric_shapes.ipynb  kernelshap_mnist.ipynb  kernelshap_raster_emulator.ipynb  kernelshap_tabular_emulator.ipynb  kernelshap_tabular_land_atmosphere.ipynb  kernelshap_tabular_penguin.ipynb  (+1 more)
(+16 files in other folders)
