# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = DIANNA Team
author_email = dianna-ai@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Deep Insight And Neural Network Analysis
keywords =
    XAI
    machine learning
long_description = file: README.md
long_description_content_type = text/markdown
name = dianna
project_urls =
    Bug Tracker = https://github.com/dianna-ai/dianna/issues
url = https://github.com/dianna-ai/dianna
version = 0.8.0
license = Apache License 2.0

[options]
python_requires = >=3.7,<3.11
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    ipython
    lime
    matplotlib
    numpy
    onnx
    onnx_tf
    onnxruntime
    shap
    scikit-image==0.19.1
    tqdm
    xarray
    # tf and tfprob are required but not declared by onnx_tf
    tensorflow >= 2.11
    tensorflow_probability

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    pytest
    pytest-cov
    pre-commit
    scipy
    spacy
    torchtext
    coverage[toml]
docs =
    myst-parser
    nbmake
    nbsphinx
    nbsphinx_link
    pandoc
    sphinx
    sphinx-autoapi
    sphinx_rtd_theme
publishing =
    build
    twine
    wheel
text =
    torchtext
    spacy
dashboard =
    keras
    Pillow
    plotly
    scipy
    spacy
    streamlit
    torchtext
notebooks =
    keras
    nbmake
    notebook
    Pillow
    pytorch_lightning
    scikit-learn
    scipy
    skl2onnx
    spacy
    tf2onnx
    torch
    torchtext
    torchvision
    ipywidgets

[options.entry_points]
console_scripts =
  dianna-dashboard = dianna.cli:dashboard

[options.packages.find]
include = dianna, dianna.*

[yapf]
blank_lines_between_top_level_imports_and_variables = 2
