# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = DIANNA Team
author_email = dianna-ai@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Deep Insight And Neural Network Analysis
keywords =
    XAI
    machine learning
long_description = file: README.md
long_description_content_type = text/markdown
name = dianna
project_urls =
    Bug Tracker = https://github.com/dianna-ai/dianna/issues
url = https://github.com/dianna-ai/dianna
version = 1.2.0
license = Apache License 2.0

[options]
python_requires = >=3.8,<3.12
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    fastdtw
    ipython
    lime
    matplotlib
    numpy
    onnx
    onnx_tf
    onnxruntime
    shap
    scikit-image>=0.19.3
    scikit-learn
    tqdm
    xarray
    # tf and tfprob are required but not declared by onnx_tf
    tensorflow >= 2.12
    tensorflow_probability
    # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
    importlib_resources;python_version<'3.10'

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    pytest-playwright
    pytest
    pytest-cov
    pre-commit
    scipy
    spacy
    torchtext
    coverage[toml]
docs =
    myst-parser
    nbmake
    nbsphinx
    nbsphinx_link
    pandoc
    sphinx
    sphinx-autoapi
    sphinx_rtd_theme
publishing =
    build
    twine
    wheel
text =
    torchtext
    spacy
dashboard =
    importlib_resources;python_version<'3.10'
    keras
    Pillow
    plotly
    scipy
    spacy
    streamlit
    torchtext
notebooks =
    keras
    nbmake
    notebook
    Pillow
    pytorch_lightning
    scipy
    skl2onnx
    spacy
    tf2onnx
    torch
    torchtext
    torchvision
    ipywidgets

[options.entry_points]
console_scripts =
  dianna-dashboard = dianna.cli:dashboard

[options.packages.find]
include = dianna, dianna.*

[tool:pytest]
markers =
    dashboard: Test dashboard user workflow, requires playwright with browser installed (`playwright install chromium`)
