# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = DIANNA Team
author_email = dianna-ai@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Deep Insight And Neural Network Analysis
keywords =
    XAI
    machine learning
long_description = file: README.md
long_description_content_type = text/markdown
name = dianna
project_urls =
    Bug Tracker = https://github.com/dianna-ai/dianna/issues
url = https://github.com/dianna-ai/dianna
version = 1.6.0
license = Apache License 2.0

[options]
python_requires = >=3.8,<3.12
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    fastdtw
    ipython
    lime
    matplotlib
    numpy>=1.20
    onnx==1.14.1
    onnx_tf
    onnxruntime
    pooch
    shap<0.45
    scikit-image>=0.19.3
    scikit-learn
    tqdm
    xarray
    pandas
    torch <=2.3.1  # this is temporary, see #829
    # tf and tfprob are required but not declared by onnx_tf
    tensorflow >= 2.12
    tensorflow_probability <0.24
    # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
    importlib_resources;python_version<'3.10'

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    pre-commit
    scipy
    spacy
    coverage[toml]
    pytest
    pytest-cov
    pytest-playwright
docs =
    myst-parser
    nbmake
    nbsphinx
    nbsphinx_link
    pandoc
    sphinx
    sphinx-autoapi
    sphinx_rtd_theme
publishing =
    build
    twine
    wheel
text =
    spacy
dashboard =
    importlib_resources;python_version<'3.10'
    keras
    Pillow
    plotly
    scipy
    seaborn
    spacy
    streamlit-aggrid
    streamlit
    streamlit_option_menu
notebooks =
    keras
    nbmake
    notebook
    Pillow
    pytorch_lightning
    scipy
    skl2onnx
    spacy
    seaborn
    tf2onnx
    torch
    torchvision
    ipywidgets
    freetype-py
    transformers
    xgboost

[options.entry_points]
console_scripts =
  dianna-dashboard = dianna.cli:dashboard

[options.packages.find]
include = dianna, dianna.*

[tool:pytest]
markers =
    dashboard: Test dashboard user workflow, requires playwright with browser installed (`playwright install chromium`)
